Updated JSON data structure in data.json to include new upcoming projects and improved formatting. Refactored CSS styles in style.css for consistency and readability. Adjusted image paths in HTML files for correct resource loading. Enhanced JavaScript components for better code organization and clarity in navigation and about page functionalities.

--- a/public/scss/components/Components/HomePage/background/background.scss
+++ b/public/scss/components/Components/HomePage/background/background.scss
@@ -1,21 +1,22 @@
-@use "../../../../abstracts/colors";
-@use "../../../../abstracts/animations";
+@use '../../../../abstracts/colors';
+@use '../../../../abstracts/animations';
 
 .home {
-  background: black;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-    url("/images/Background/background.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-  &__light {
-    background: black;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url("/images/Background/background.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: invert(85%) sepia(43%) saturate(134%) hue-rotate(125deg) brightness(100%) contrast(102%);
-  }
+	background: black;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+		url('images/Background/background.webp');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	&__light {
+		background: black;
+		background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+			url('images/Background/background.webp');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		filter: invert(85%) sepia(43%) saturate(134%) hue-rotate(125deg)
+			brightness(100%) contrast(102%);
+	}
 }
